--- a/src/app/topic/components/topic-discussion-create-dialog/topic-discussion-create-dialog.component.html
+++ b/src/app/topic/components/topic-discussion-create-dialog/topic-discussion-create-dialog.component.html
@@ -151,6 +151,7 @@
             <div class="header_wrap">
               <div class="bold" translate="COMPONENTS.TOPIC_DISCUSSION_CREATE.SETTINGS_HEADING_DISCUSSION_DEADLINE">
               </div>
+              <div translate="COMPONENTS.TOPIC_DISCUSSION_CREATE.SETTINGS_HEADING_DISCUSSION_DEADLINE_DESC"></div>
             </div>
           </div>
           <div class="radio_wrap discussion date_selector"
