--- a/src/app/topic/components/topic-onboarding/topic-onboarding.component.html
+++ b/src/app/topic/components/topic-onboarding/topic-onboarding.component.html
@@ -163,7 +163,10 @@
     </div>
     <div class="dialog_content">
       <div class="title_wrap">
-        <div id="title" translate="COMPONENTS.TOPIC_ONBOARDING.TITLE"></div>
+        <div id="title">
+          <span translate="COMPONENTS.TOPIC_ONBOARDING.TITLE"></span>
+          <span>🎉</span>
+        </div>
       </div>
       <div class="content" translate="COMPONENTS.TOPIC_ONBOARDING.DESCRIPTION"></div>
       <div class="content bold" translate="COMPONENTS.TOPIC_ONBOARDING.TAKE_A_TOUR"></div>
