--- a/src/app/topic/topic.component.html
+++ b/src/app/topic/topic.component.html
@@ -1145,7 +1145,7 @@
               </div>
               <div class="item_content">
                 <div class="graph_wrap">
-                  <div class="legend">
+                  <div class="legend discussion_legend">
                     <div class="legend_row">
                       <div class="legend_item pro">
                         <div class="dot"></div>
