FIX Update Angular fix idea loading

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1849,6 +1849,7 @@ tour-item-template {
     border: none;
 
     .cm-formatting-strong,
+    .cm-formatting-strikethrough,
     .cm-formatting-em {
       display: none;
     }
