--- a/src/app/core/components/create/create.component.html
+++ b/src/app/core/components/create/create.component.html
@@ -13,7 +13,9 @@
 
       </div>
       <div class="item_text_wrap">
-        <div class="item_title" translate="COMPONENTS.CREATE.TITLE_IDEATION"></div>
+        <div class="item_title">
+          <span translate="COMPONENTS.CREATE.TITLE_IDEATION"></span><span class="beta">(BETA)</span>
+        </div>
         <div class="item_description" translate="COMPONENTS.CREATE.DESC_IDEATION"></div>
       </div>
     </div>
