--- a/src/app/topic/components/argument/argument.component.html
+++ b/src/app/topic/components/argument/argument.component.html
@@ -189,7 +189,7 @@
               <div class="reply_referer">
               </div>
               <div class="reply_more" *ngIf="!last"></div>
-              <argument [argument]="reply" [topicId]="topicId" [root]="argument" [showReplies]="showReplies"></argument>
+              <argument [argument]="reply" [topicId]="topicId" [root]="argument" [showReplies]="showReplies" [canReply]="canReply"></argument>
             </div>
           </ng-container>
         </ng-container>
@@ -199,7 +199,7 @@
               <div class="reply_referer">
               </div>
               <div class="reply_more" *ngIf="!last"></div>
-              <argument [argument]="reply" [topicId]="topicId" [root]="argument" [showReplies]="showReplies"></argument>
+              <argument [argument]="reply" [topicId]="topicId" [root]="argument" [showReplies]="showReplies" [canReply]="canReply"></argument>
             </div>
           </ng-container>
         </ng-container>
