--- a/src/app/topic/components/topic-vote-cast/topic-vote-cast.component.html
+++ b/src/app/topic/components/topic-vote-cast/topic-vote-cast.component.html
@@ -168,11 +168,11 @@
                       </defs>
                     </svg>
                     <span translate="COMPONENTS.TOPIC_VOTE_CAST.BTN_DOWNLOAD_USER_BDOC"></span>
-                    <div class="tooltip" tooltip>
+                    <!--div class="tooltip" tooltip>
                       <div class="content_title">Help on its way</div>
                       <div class="content_description">Help text coming soon! Please tell us what help you were looking
                         for.</div>
-                    </div>
+                    </!--div-->
                   </a>
 
                   <ng-container *ngIf="vote.authType===VOTE_AUTH_TYPES.hard">
