--- a/src/app/ideation/components/topic-ideation/topic-ideation.component.html
+++ b/src/app/ideation/components/topic-ideation/topic-ideation.component.html
@@ -36,6 +36,25 @@
                 <span translate="COMPONENTS.TOPIC_IDEATION.OPT_EDIT_IDEATION"></span>
               </a>
             </ng-container>
+            <ng-container *ngIf="canEdit()">
+              <div class="option" (click)="exportIdeas()">
+                <div class="icon_wrap">
+                  <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g clip-path="url(#clip0_335_42955)">
+                      <path
+                        d="M8 11.5189C7.87556 11.5189 7.75573 11.4972 7.64053 11.4536C7.52462 11.4093 7.42222 11.3344 7.33333 11.229L4 7.96046C3.85778 7.81988 3.78667 7.63537 3.78667 7.40692C3.78667 7.17847 3.85778 6.99396 4 6.85338C4.16 6.69522 4.35093 6.61158 4.5728 6.60244C4.79538 6.594 4.98667 6.66886 5.14667 6.82702L7.2 8.85667V0.790774C7.2 0.562328 7.27573 0.373246 7.4272 0.223526C7.57796 0.0745089 7.76889 0 8 0C8.23111 0 8.4224 0.0745089 8.57387 0.223526C8.72462 0.373246 8.8 0.562328 8.8 0.790774V8.85667L10.8533 6.82702C10.9956 6.68644 11.1822 6.61615 11.4133 6.61615C11.6444 6.61615 11.84 6.69522 12 6.85338C12.1422 6.99396 12.2133 7.1739 12.2133 7.39321C12.2133 7.61322 12.1422 7.80231 12 7.96046L8.66667 11.229C8.57778 11.3344 8.47573 11.4093 8.36053 11.4536C8.24462 11.4972 8.12444 11.5189 8 11.5189ZM1.92 16C1.38667 16 0.933333 15.8155 0.56 15.4465C0.186667 15.0774 0 14.6293 0 14.1021V12.0461C0 11.8177 0.0757331 11.6286 0.2272 11.4789C0.377955 11.3299 0.568889 11.2554 0.8 11.2554C1.03111 11.2554 1.22204 11.3299 1.3728 11.4789C1.52427 11.6286 1.6 11.8177 1.6 12.0461V14.1021C1.6 14.1724 1.63556 14.2427 1.70667 14.313C1.77778 14.3833 1.84889 14.4185 1.92 14.4185H14.08C14.1511 14.4185 14.2222 14.3833 14.2933 14.313C14.3644 14.2427 14.4 14.1724 14.4 14.1021V12.0461C14.4 11.8177 14.4754 11.6286 14.6261 11.4789C14.7776 11.3299 14.9689 11.2554 15.2 11.2554C15.4311 11.2554 15.6224 11.3299 15.7739 11.4789C15.9246 11.6286 16 11.8177 16 12.0461V14.1021C16 14.6293 15.8133 15.0774 15.44 15.4465C15.0667 15.8155 14.6133 16 14.08 16H1.92Z"
+                        fill="#2C3B47" />
+                    </g>
+                    <defs>
+                      <clipPath id="clip0_335_42955">
+                        <rect width="16" height="16" fill="white" />
+                      </clipPath>
+                    </defs>
+                  </svg>
+                </div>
+                <span translate="COMPONENTS.TOPIC_IDEATION.OPT_DOWNLOAD_IDEAS"></span>
+              </div>
+            </ng-container>
             <ng-container *ngIf="canEditDeadline()">
               <div class="option" (click)="editDeadline()">
                 <div class="icon_wrap">
