--- a/src/app/ideation/components/edit-idea/edit-idea.component.html
+++ b/src/app/ideation/components/edit-idea/edit-idea.component.html
@@ -71,7 +71,7 @@
           </div>
         </div>
       </ng-container>
-      <input id="image_upload_input" type="file" #imageUpload (change)="fileUpload()" />
+      <input id="image_upload_input" multiple type="file" #imageUpload (change)="fileUpload()" />
     </form>
   </div>
   <div id="buttons_row">
@@ -85,7 +85,7 @@
       </button>
     </div>
     <div id="navigate_create">
-      <button class="btn_big_submit_ghost" (click)="uploadImage()">
+      <button class="btn_medium_submit_ghost" (click)="uploadImage()">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
             d="M7.42058 17.0297H16.6588C16.8706 17.0297 17.0206 16.9414 17.1088 16.7649C17.1971 16.5885 17.1794 16.412 17.0559 16.2355L14.5412 12.9002C14.4353 12.7591 14.3029 12.6885 14.1441 12.6885C13.9853 12.6885 13.8618 12.7591 13.7735 12.9002L11.1794 16.262L9.45882 14.0385C9.35293 13.9149 9.22058 13.8532 9.06176 13.8532C8.90293 13.8532 8.7794 13.9238 8.69117 14.0649L7.02352 16.2355C6.89999 16.412 6.88693 16.5885 6.98434 16.7649C7.08105 16.9414 7.22646 17.0297 7.42058 17.0297Z"
