--- a/src/app/ideation/components/edit-idea/edit-idea.component.html
+++ b/src/app/ideation/components/edit-idea/edit-idea.component.html
@@ -13,14 +13,14 @@
       </div>
     </div>
     <form id="idea_form" [attr.disabled]="!loggedIn()" name="ideaForm" [formGroup]="ideaForm">
-      <cos-input
-        placeholder="{{'COMPONENTS.EDIT_IDEA.PLACEHOLDER_ADD_STATEMENT_TO_IDEA' | translate }}"
+      <cos-input placeholder="{{'COMPONENTS.EDIT_IDEA.PLACEHOLDER_ADD_STATEMENT_TO_IDEA' | translate }}"
         limit="{{'COMPONENTS.EDIT_IDEA.SUBJECT_CHARACTERS_LEFT' | translate:{chars: ideaForm.value['statement']?.length || 0, charsLeft: IDEA_STATEMENT_MAXLENGTH} }}">
-        <input id="idea_statement" name="statement"  formControlName="statement" autocomplete="off"
-          placeholder="{{'COMPONENTS.EDIT_IDEA.PLACEHOLDER_ADD_STATEMENT_TO_IDEA' | translate }}"
-          class="gray_borders" [ngClass]="{'error_input': ideaForm.controls['statement'].errors && ideaForm.controls['statement'].errors['required'] && ideaForm.controls['statement'].touched}" (focus)="focusIdeaStatement"
-          [attr.maxlength]="IDEA_STATEMENT_MAXLENGTH" required>
-        <label for="idea_statement" class="error_label" *ngIf="ideaForm.controls['statement'].errors && ideaForm.controls['statement'].errors['required'] && ideaForm.controls['statement'].touched">
+        <input id="idea_statement" name="statement" formControlName="statement" autocomplete="off"
+          placeholder="{{'COMPONENTS.EDIT_IDEA.PLACEHOLDER_ADD_STATEMENT_TO_IDEA' | translate }}" class="gray_borders"
+          [ngClass]="{'error_input': ideaForm.controls['statement'].errors && ideaForm.controls['statement'].errors['required'] && ideaForm.controls['statement'].touched}"
+          (focus)="focusIdeaStatement" [attr.maxlength]="IDEA_STATEMENT_MAXLENGTH" required>
+        <label for="idea_statement" class="error_label"
+          *ngIf="ideaForm.controls['statement'].errors && ideaForm.controls['statement'].errors['required'] && ideaForm.controls['statement'].touched">
           <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd"
               d="M8.89438 1.78863C8.52586 1.05158 7.47405 1.05158 7.10553 1.78863L0.723562 14.5526C0.391112 15.2175 0.874608 15.9998 1.61799 15.9998H14.3819C15.1253 15.9998 15.6088 15.2175 15.2763 14.5526L8.89438 1.78863ZM6.99996 6.99977C6.99996 6.44749 7.44767 5.99977 7.99996 5.99977C8.55224 5.99977 8.99996 6.44749 8.99996 6.99977V9.99977C8.99996 10.5521 8.55224 10.9998 7.99996 10.9998C7.44767 10.9998 6.99996 10.5521 6.99996 9.99977V6.99977ZM6.99996 12.9998C6.99996 12.4475 7.44767 11.9998 7.99996 11.9998C8.55224 11.9998 8.99996 12.4475 8.99996 12.9998C8.99996 13.5521 8.55224 13.9998 7.99996 13.9998C7.44767 13.9998 6.99996 13.5521 6.99996 12.9998Z"
@@ -30,23 +30,29 @@
         </label>
       </cos-input>
       <textarea cosmarkdown name="description" formControlName="description"
-        cosmarkdowntranslatecharacterstatuskey="COMPONENTS.EDIT_IDEA.IDEA_TYPE_CHARACTER_LIMIT"
-        id="idea_description" [(item)]="description" class="gray_borders" (itemChange)="updateText($event)"
+        cosmarkdowntranslatecharacterstatuskey="COMPONENTS.EDIT_IDEA.IDEA_TYPE_CHARACTER_LIMIT" id="idea_description"
+        [(item)]="description" class="gray_borders" (itemChange)="updateText($event)"
         placeholder="COMPONENTS.EDIT_IDEA.PLACEHOLDER_EXPLAIN_YOUR_IDEA"
-        [ngClass]="{'error_input': ideaForm.controls['description'].errors && ideaForm.controls['description'].errors['required'] && ideaForm.controls['description'].touched}" [limit]="ideaMaxLength()" required></textarea>
-      <label for="description" class="error_label" *ngIf="ideaForm.controls['description'].errors && ideaForm.controls['description'].errors['required'] && ideaForm.controls['description'].touched">
+        [ngClass]="{'error_input': ideaForm.controls['description'].errors && ideaForm.controls['description'].errors['required'] && ideaForm.controls['description'].touched}"
+        [limit]="ideaMaxLength()" required></textarea>
+      <label for="description" class="error_label"
+        *ngIf="ideaForm.controls['description'].errors && ideaForm.controls['description'].errors['required'] && ideaForm.controls['description'].touched">
         <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd" clip-rule="evenodd"
             d="M8.89438 1.78863C8.52586 1.05158 7.47405 1.05158 7.10553 1.78863L0.723562 14.5526C0.391112 15.2175 0.874608 15.9998 1.61799 15.9998H14.3819C15.1253 15.9998 15.6088 15.2175 15.2763 14.5526L8.89438 1.78863ZM6.99996 6.99977C6.99996 6.44749 7.44767 5.99977 7.99996 5.99977C8.55224 5.99977 8.99996 6.44749 8.99996 6.99977V9.99977C8.99996 10.5521 8.55224 10.9998 7.99996 10.9998C7.44767 10.9998 6.99996 10.5521 6.99996 9.99977V6.99977ZM6.99996 12.9998C6.99996 12.4475 7.44767 11.9998 7.99996 11.9998C8.55224 11.9998 8.99996 12.4475 8.99996 12.9998C8.99996 13.5521 8.55224 13.9998 7.99996 13.9998C7.44767 13.9998 6.99996 13.5521 6.99996 12.9998Z"
             fill="#EF4025" />
         </svg>
-        <span class="error_text" translate="COMPONENTS.EDIT_IDEA.MSG_ERROR_DESCRIPTION" [translateParams]="{chars: ideaMaxLength()}"></span>
+        <span class="error_text" translate="COMPONENTS.EDIT_IDEA.MSG_ERROR_DESCRIPTION"
+          [translateParams]="{chars: ideaMaxLength()}"></span>
       </label>
       <ng-container *ngIf="images.length || newImages.length">
         <div class="idea_images_wrap">
 
           <div class="image" *ngFor="let image of newImages; index as index">
-            <a class="name">{{image.name}}</a>
+            <div class="image_data">
+              <img [src]="image.link" />
+              <a class="name">{{image.name}}</a>
+            </div>
             <button class="btn_small_plain icon" (click)="removeNewImage(index)">
               <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M14 13.9997H15.3333L15.3333 19.333H14L14 13.9997Z" fill="#2C3B47" />
@@ -58,7 +64,10 @@
             </button>
           </div>
           <div class="image" *ngFor="let image of images; index as index">
-            <a class="name">{{image.name}}</a>
+            <div class="image_data">
+              <img [src]="image.link" />
+              <a class="name">{{image.name}}</a>
+            </div>
             <button class="btn_small_plain icon" (click)="removeImage(image, index)">
               <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M14 13.9997H15.3333L15.3333 19.333H14L14 13.9997Z" fill="#2C3B47" />
