--- a/src/app/ideation/components/edit-idea/edit-idea.component.scss
+++ b/src/app/ideation/components/edit-idea/edit-idea.component.scss
@@ -180,5 +180,24 @@
     align-items: center;
     gap: 4px;
     width: 100%;
+    .image_data {
+      display: flex;
+      align-items: center;
+      gap: 4px;
+
+      img {
+        height: 40px;
+        transition: all 0.3s ease-in;
+        -webkit-transition: all 0.3s ease-in;
+        -moz-transition: all 0.3s ease-in;
+        -o-transition: all 0.3s ease-in;
+        -ms-transition: all 0.3s ease-in;
+
+        @include mixins.mobile {
+          width: 100%;
+          height: auto;
+        }
+      }
+    }
   }
 }
